--- a/.github/workflows/AutoUpdate.yml
+++ b/.github/workflows/AutoUpdate.yml
@@ -1,11 +1,11 @@
 name: AutoUpdate
 
-on: 
+on:
   push:
     branches:
       - 'main'
       - 'dev'
-      
+
   workflow_dispatch:
 
 jobs:
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
         with:
-          repository: GoodManWEN/GoodManWEN.github.io
+          repository: hzz07/GoodManWEN.github.io
       - name: Set up Node
         uses: actions/setup-node@v2
         with:
@@ -33,13 +33,13 @@ jobs:
           npm run build
       - name: Commit files
         run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Action[Bot]"
+          git config --local user.email "1032325608@qq.com"
+          git config --local user.name "hzz BOT"
           git add .
           git commit -m "update built files after user commit"
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          
-      
+          github_token: ${{ secrets.ACCESS }}
+
+
