--- a/.github/workflows/AutoUpdate.yml
+++ b/.github/workflows/AutoUpdate.yml
@@ -38,9 +38,9 @@ jobs:
           git add .
           git commit -m "update built files after user commit"
       - name: Push changes
-        uses: ad-m/github-push-action@master
+        uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
-          github_token: ${{ secrets.ACCESS }}
+          ACCESS_TOKEN: ${{ secrets.ACCESS }}
           REPOSITORY_NAME: hzz07/hzz07.github.io
           BRANCH: master
 
